
Toplevel and debugger:
- PR#6468: toplevel now supports backtraces if invoked with OCAMLRUNPARAM=b
  (whitequark and Jake Donham,
   review by Gabriel Scherer and Jacques-Henri Jourdan)
- PR#6935, GPR#298: crash in debugger when load_printer is given a directory
  (Junsong Li, review by Gabriel Scherer)

Other libraries:
- PR#4023 and GPR#68: add Unix.sleepf (sleep with sub-second resolution)
  (Evgenii Lepikhin and Xavier Leroy)
* Protect Unix.sleep against interruptions by handled signals.
  Before, a handled signal could cause Unix.sleep to return early.
  Now, the sleep is restarted until the given time is elapsed.
  (Xavier Leroy)
- PR#6896: serious reimplementation of Big_int.float_of_big_int and
  Ratio.float_of_ratio, ensuring that the result is correctly rounded.
  (Xavier Leroy)
- PR#7013: spurious wake-up in the Event module
  (Xavier Leroy)
- PR#7024: in documentation of Str regular expressions, clarify what
    "end of line" means for "^" and "$" regexps.

OCamlbuild:
- PR#6794, PR#6809: pass package-specific include flags when building C files
  (Jérémie Dimino, request by whitequark)
- GPR#208: add "asm" tag to ocamlbuild to enable flag -S
  (ygrek)
- Changed OCamlbuild's license to LGPLv2 with static linking exception.
- GPR#219: speedup target-already-built builds
  (ygrek)
- PR#6605, GPR#117: use ocamlfind, if available, to discover camlp4 path
  (Vincent Laporte)

Manual:
- GPR#302: The OCaml reference manual is now included in the manual/
  subdirectory of the main OCaml source repository. Contributions to
  the manual are warmly welcome.
  (François Bobot, review by Florian Angeletti)

Bug fixes:
- PR#3612: memory leak in bigarray read from file
  (Pierre Chambart, report by Gary Huber)
* PR#4166, PR#6956: force linking when calling external C primitives
  (Jacques Garrigue, reports by Markus Mottl and Christophe Troestler)
* PR#4539: change exception string raised when comparing functional values